--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.decodersfamily" "\0"
-            VALUE "FileDescription", "calcu" "\0"
+            VALUE "FileDescription", "Calcu" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "calcu" "\0"
+            VALUE "InternalName", "Calcu" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.decodersfamily. All rights reserved." "\0"
             VALUE "OriginalFilename", "calcu.exe" "\0"
-            VALUE "ProductName", "calcu" "\0"
+            VALUE "ProductName", "Calcu" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
