--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = calcu
+PRODUCT_NAME = Calcu;
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.decodersfamily.calcu
+PRODUCT_BUNDLE_IDENTIFIER = com.decodersfamily.calcu;
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2023 com.decodersfamily. All rights reserved.
