--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,14 +40,16 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.7
   fluttertoast:
-  flutter_launcher_icons: "^0.13.1"
+  flutter_launcher_icons: ^0.13.1
   math_expressions: ^2.4.0
   shared_preferences: ^2.2.0
+  rename: ^2.1.1
 
 
 flutter_launcher_icons:
-  android: "launcher_icon"
+  android: "calcu_icon"
   ios: true
+  remove_alpha_ios: true
   image_path: "assets/icon/app_icon.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
   web:
