--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ flutter_launcher_icons:
   android: "calcu_icon"
   ios: true
   remove_alpha_ios: true
-  image_path: "assets/icon/app_icon.png"
+  image_path: "assets/icon/calculator.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
   web:
     generate: false
