--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,23 +47,28 @@ dependencies:
 
 
 flutter_launcher_icons:
-  android: "calcu_icon"
-  ios: true
-  remove_alpha_ios: true
-  image_path: "assets/icon/calculator.png"
+  #  image_path: "assets/images/icon-128x128.png"
+  image_path_android: "assets/icon/ic_launcher.png"
+  image_path_ios: "assets/icon/AppIcon~ios-marketing.png"
+  android: true # can specify file name here e.g. "ic_launcher"
+  ios: true # can specify file name here e.g. "My-Launcher-Icon"
+  adaptive_icon_background: "assets/icon/ic_launcher_background.png" # only available for Android 8.0 devices and above
+  adaptive_icon_foreground: "assets/icon/ic_launcher_foreground.png" # only available for Android 8.0 devices and above
   min_sdk_android: 21 # android min sdk min:16, default 21
+  remove_alpha_ios: true
+  background_color_ios: "#ffffff"
   web:
     generate: false
-    image_path: "assets/icon/app_icon.png"
+    image_path: "assets/images/icon-1024x1024.png"
     background_color: "#hexcode"
     theme_color: "#hexcode"
   windows:
     generate: false
-    image_path: "assets/icon/app_icon.png"
+    image_path: "assets/images/icon-1024x1024.png"
     icon_size: 48 # min:48, max:256, default: 48
   macos:
     generate: false
-    image_path: "assets/icon/app_icon.png"
+    image_path: "assets/images/icon-1024x1024.png"
   
 
   # The following adds the Cupertino Icons font to your application.
