--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   shared_preferences: ^2.2.0
   rename: ^2.1.1
   intl:
+  flex_color_scheme: ^7.3.1
+  url_launcher: ^6.2.4
+  logger: ^1.4.0
 
 
 flutter_launcher_icons:
