--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,6 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  get:
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.7
@@ -49,6 +48,8 @@ dependencies:
   flex_color_scheme: ^7.3.1
   url_launcher: ^6.2.4
   logger: ^1.4.0
+  get_it: ^7.7.0
+  provider: ^6.1.2
 
 
 flutter_launcher_icons:
