--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 3.4.0+1
+version: 3.5.0+1
 
 environment:
   sdk: '>=3.0.5 <4.0.0'
@@ -38,13 +38,13 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.7
-  fluttertoast:
-  get_storage:
+  fluttertoast: ^8.2.6
+  get_storage: ^2.1.1
   flutter_launcher_icons: ^0.13.1
   math_expressions: ^2.4.0
   shared_preferences: ^2.2.3
   rename: ^2.1.1
-  intl:
+  intl: ^0.19.0
   flex_color_scheme: ^7.3.1
   url_launcher: ^6.2.4
   logger: ^1.4.0
