--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   get_it: ^8.0.3
   provider: ^6.1.5
   flutter_screenutil: ^5.9.3
+  math_expressions: ^3.0.0
 
 
 flutter_launcher_icons:
