Refactor: Remove unused widget files and home provider
- Deleted Buttonrow4, Buttonrow5, Buttonrow6, InputViewRow, ResultViewRow, SavedViewRow, SimpleCursorInputView, and HomePage widgets as they are no longer needed.
- Removed HomeProvider class to streamline the codebase.
- Cleaned up app colors and themes by removing the app_colors.dart file.
- Updated pubspec.yaml to remove unused dependencies and added package_info_plus for versioning.
- Added AppInfoDialog widget to provide app details and features.
- Updated GeneratedPluginRegistrant.swift to include package_info_plus.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    
     <application
         android:label="Calcu"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:allowBackup="false"
+        android:enableOnBackInvokedCallback="true">
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -41,6 +45,20 @@
         <intent>
             <action android:name="android.intent.action.PROCESS_TEXT"/>
             <data android:mimeType="text/plain"/>
+        </intent>
+        <!-- Query for web browsers -->
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="http" />
+        </intent>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="https" />
+        </intent>
+        <!-- Query for email apps -->
+        <intent>
+            <action android:name="android.intent.action.SEND" />
+            <data android:mimeType="*/*" />
         </intent>
     </queries>
 </manifest>
