--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   provider: ^6.1.5
   flutter_screenutil: ^5.9.3
   math_expressions: ^3.0.0
+  package_info_plus: ^8.0.2
 
 
 flutter_launcher_icons:
